
        BOOKKEEPER-529: stopServingSubscriber in delivery manager should remove stub callbacks in ReadAheadCache (sijie via ivank)

        BOOKKEEPER-543: Read zk host list in a wrong way in hedwig server (Fangmin via sijie)

        BOOKKEEPER-540: #stopServingSubscriber when channel is disconnected. (Fangmin via sijie)

    IMPROVEMENTS:

      BOOKKEEPER-467: Allocate ports for testing dynamically (ivank)

      BOOKKEEPER-471: Add scripts for preCommit testing (ivank)

      BOOKKEEPER-476: Log to file during tests (ivank via fpj)

      BOOKKEEPER-491: Hedwig doc for configuration (fpj, sijie via fpj)

      BOOKKEEPER-495: Revise BK config doc (fpj, ivank via fpj)

      BOOKKEEPER-523: Every test should have a timeout (ivank, sijie via fpj)

      BOOKKEEPER-541: Add guava to notice file (ivank via fpj)

      bookkeeper-server:

        BOOKKEEPER-328: Bookie DeathWatcher is missing thread name (Rakesh via sijie)

        BOOKKEEPER-2: bookkeeper does not put enough meta-data in to do recovery properly (ivank via sijie)

        BOOKKEEPER-317: Exceptions for replication (ivank via sijie)

        BOOKKEEPER-246: Recording of underreplication of ledger entries (ivank)

        BOOKKEEPER-247: Detection of under replication (ivank)

        BOOKKEEPER-299: Provide LedgerFragmentReplicator which should replicate the fragments found from LedgerChecker (umamahesh via ivank)

        BOOKKEEPER-248: Rereplicating of under replicated data (umamahesh via ivank)

        BOOKKEEPER-304: Prepare bookie vs ledgers cache and will be used by the Auditor (rakeshr via ivank)

        BOOKKEEPER-272: Provide automatic mechanism to know bookie failures (rakeshr via ivank)

        BOOKKEEPER-300: Create Bookie format command (Vinay via sijie)

        BOOKKEEPER-208: Separate write quorum from ack quorum (ivank)

        BOOKKEEPER-325: Delay the replication of a ledger if RW found that its last fragment is in underReplication. (umamahesh via ivank)
